feat: add profile screen ui

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Local design assets
+/diagrams/
+flutter_01.png
